# bedside_manner_ai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
clinicomm/: __init__.py  ablations.py  baseline.py  config.py  external_metrics.py  logging_setup.py  metrics.py  pipeline.py  schemas.py
clinicomm/datasets/: __init__.py  aci_bench.py  base.py  mts_dialog.py  primock57.py
clinicomm/embed/: build_index.py  chunk.py
clinicomm/index/: chroma_store.py
clinicomm/ingest/: discovery.py  efetch.py  eutils.py  manifest.py
clinicomm/modules/: _authority.py  _glossary.py  llm_client.py  m1_intake.py  m2_retrieval.py  m3_reasoning.py  m4_response.py
clinicomm/parse/: pubmed_xml.py
config/: pipeline.yaml
config/prompts/: assertion_extraction.txt  conflict_resolution.txt  intake_completion_check.txt  intake_system.txt  response_generation.txt
demos/synthetic_patients/: p001_fatigue_weightloss.json  p002_hypertension_followup.json  p003_depression_screening.json
manuscript/data/: ablation_metrics.json  calibration_aci_bench.json  calibration_mts_dialog.json  calibration_primock57.json  external_metrics_aci_bench.json  external_metrics_mts_dialog.json  external_metrics_primock57.json  provenance_audit.json  sensitivity_threshold.json  sensitivity_topk.json
manuscript/figures_ascii/: fig1_architecture.notes.md  fig1_architecture.txt  fig2_intake_state_machine.notes.md  fig2_intake_state_machine.txt  fig3_schema_illustration.notes.md  fig4_retrieval.notes.md  (+6 more)
scripts/: bootstrap.sh  eval_ablations.py  eval_against_gold.py  eval_on_dataset.py  gen_clinician_forms.py  gen_manuscript_artifacts.py  provenance_audit.py  regen_pub_tables.py  render_figures.py  run_demo.py  run_postprocess_real.sh  sanity_query.py  sensitivity_sweep.py  start_vllm_server.sh
tests/: test_phase13_smoke.py
(+1028 files in other folders)
