[project]
name = "clinicomm"
version = "0.1.0"
description = "Patient-centered clinical communication via LLMs (research prototype)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "biopython>=1.83",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "sentence-transformers>=2.7",
    "chromadb>=0.5",
    "pydantic>=2.6",
    "tqdm>=4.66",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "networkx>=3.2",
    "rich>=13.7",
    # Free local LLM inference. Pin to a vLLM that ships a torch+cu124
    # wheel — the host's NVIDIA driver (550.x) supports CUDA up to 12.4,
    # so cu13 torch wheels can't see the GPU.
    "vllm>=0.7,<0.11",
    # Pin torch to a cu124 wheel from the official PyTorch index (see
    # [tool.uv.sources] below). 2.6.x is the latest series that ships
    # cu124 wheels and is compatible with vLLM 0.7–0.10.
    "torch==2.6.0",
    # vLLM 0.8.x was built against transformers 4.x. The Qwen2Tokenizer
    # API used by vLLM was removed in transformers 5.x, so pin <5.
    "transformers>=4.45,<5",
    # OpenAI-compatible HTTP client to talk to the local vLLM server.
    "openai>=1.40",
    # Phase 12 ablation + figures: SVG publication plots and FK grade.
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "textstat>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clinicomm"]

# ---- uv: route torch (and friends) to PyTorch's cu124 wheel index ----
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
